# master_thesis

./: .gitignore  .pre-commit-config.yaml  pyproject.toml
notebooks/: 01_yeast_map.ipynb  01_yeast_map.py  02_run_CombFold.ipynb  03_check_yeast_map_performance.ipynb  04_stoic.ipynb  05_generate_CF_set.ipynb  06_checking_for_intresting_complexes_to_look_through_CF.ipynb  get_all_intact_yeast_pairs.py  non_uniprot_ids.txt  run_CombFold.sh  violin_plot_yeast_map.py
notebooks/Dataframes/Yeast_Map/: complex_by_breaking_values.csv
scripts/: 05_run_CombFold.sbatch  06_diagnose_combfold_directionality.py  08_lookup_iptm.sh  09_lookup_iptm.py  10_run_csv_combfold.py  11_rename_afdb.py  12_analyze.sbatch  13_second_setup_pipeline.py  14_run_combfold_wihout_stoic.py  15_download_complex_pdbs.sbatch  16_download_complex_pdbs.py  18_rmsd_analysis.py  19_check_iptm_cols.py  19_check_iptm_columns.sbatch  20_map_uniprot_pdb_complex.py  21_Complex_pdb_files_run_pipeline.py  22_render_pdf_summary.py  aggregate_stoic.py  create_fasta_files_for_stoic.py  get_pdb_files.py  run_CombFold.sbatch  run_stoic.sbatch  run_stoic_batch.sbatch  sifts_uniprot_pdb.tsv
scripts/old_scripts/: create_stoic_directories.py  get_seq_from_up_id.py  old_08_lookup_iptm.sh
src/procompa/: __init__.py  utils.py
